--- a/Gauri.html
+++ b/Gauri.html
@@ -5,8 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+	<p class="why">I SAID LOOK AT IT ON PC :'( </p>
 	<div class="container">
-	  <div class="title">HAPPY BIRTHDAY GAURI</div>
+		<center>
+	  <img src="https://i.imgur.com/pYupM67.png" style="width: 90vw">
+		</center>
+	  <div class="title">HAPPY BIRTHDAY GAURi!i</div>
 	  <div class="subtitle">BEST WISHES FROM ADDITYA SINGHAL</div>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
